add machinery routes
